Funcionalidade de curtir comentario e script funcionando. Ajuste no DTO de comentario e script. Começando a camada de testes do projeto.